use class path for access to pdf